Added gameController and physics

--- a/site/src/Player.css
+++ b/site/src/Player.css
@@ -3,5 +3,11 @@
     height: 10px;
     background-color: red;
     position: relative;
-    left: 40px;
+}
+
+.click-pos {
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 1, .2);
 }
