--- a/site/src/Player.css
+++ b/site/src/Player.css
@@ -2,7 +2,7 @@
     width: 10px;
     height: 10px;
     background-color: red;
-    position: relative;
+    position: absolute;
 }
 
 .click-pos {
