Minnor fixes and improvements

--- a/site/src/Player.css
+++ b/site/src/Player.css
@@ -1,7 +1,7 @@
 .game-player {
     width: 10px;
     height: 10px;
-    background-color: red;
+    background-color: green;
     position: absolute;
 }
 
