--- a/site/src/Root.css
+++ b/site/src/Root.css
@@ -25,8 +25,8 @@
 .game-container {
     position: relative;
     display: flex;
-    background-color: rgba(0, 0, 0, .1);
     flex: 1;
+    left: 30%;
 }
 
 @keyframes root-logo-spin {
