Improved spells control. Added reflect_shield

--- a/site/src/Player.css
+++ b/site/src/Player.css
@@ -5,6 +5,10 @@
     position: absolute;
 }
 
+.reflect_shield {
+    border: 1px solid #FFCC00;
+}
+
 .click-pos {
     width: 10px;
     height: 10px;
