--- a/site/src/Spell.css
+++ b/site/src/Spell.css
@@ -3,8 +3,13 @@
     height: 10px;
     border-radius: 5px;
     position: absolute;
+    z-index: 100;
 }
 
 .fireball {
     background-color: red;
+}
+
+.follower {
+    background-color: blue;
 }
